[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "investiny"
version = "0.1.0"
packages = [
    { include = "investiny", from = "src" },
]
description = "`investpy` but made tiny."
authors = [
    "Alvaro Bartolome <alvarobartt@yahoo.com>"
]
readme = "README.md"
homepage = "https://github.com/alvarobartt/investiny"
documentation = "https://github.com/alvarobartt/investiny"
repository = "https://investiny.readthedocs.io/"
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.23.0"

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.971"
pre-commit = "^2.20.0"
pytest = "^7.1.2"

[tool.isort]
profile = "black"

[tool.mypy]
# --strict
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
# --strict end
