[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "investiny"
version = "0.5.0"
packages = [
    { include = "investiny", from = "src" },
]
description = "🤏🏻 `investpy` but made tiny."
authors = [
    "Alvaro Bartolome <alvarobartt@yahoo.com>"
]
readme = "README.md"
homepage = "https://github.com/alvarobartt/investiny"
documentation = "https://github.com/alvarobartt/investiny"
repository = "https://investiny.readthedocs.io/"
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.8"
httpx = "^0.23.0"
mkdocs = { version = "^1.4.0", optional = true }
mkdocs-material = { version = "^8.5.4", optional = true }
mkdocs-git-revision-date-localized-plugin = { version = "^1.1.0", optional = true }
mkdocstrings = { version = "^0.19.0", extras = ["python"], optional = true }

[tool.poetry.extras]
docs = ["mkdocs", "mkdocs-material", "mkdocs-git-revision-date-localized-plugin", "mkdocstrings"]

[tool.poetry.dev-dependencies]
black = "^22.6.0"
flake8 = "^4.0.1"
isort = "^5.10.1"
mypy = "^0.971"
pre-commit = "^2.20.0"
pytest = "^7.1.2"

[tool.isort]
profile = "black"

[tool.mypy]
# --strict
disallow_any_generics = true
disallow_subclassing_any = true
disallow_untyped_calls = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_return_any = true
implicit_reexport = false
strict_equality = true
# --strict end

[[tool.mypy.overrides]]
module = "investiny"
implicit_reexport = true
